# routefinder

./: .gitignore  BENCHMARK_RESULTS.md  C2Seeds.lua  CLAUDE.md  Cargo.toml  Engine.lua  FindBeowulfRoute.lua  FindBetterBeowulfRoute.lua  FindCharonRoute.lua  FindDioBeoRoute.lua  FindStyx.lua  FreshFile.sav  FreshFileNonsense.lua  FreshFilePredict.lua  LICENSE  NEW_FEATURE.md  OPTIMIZATION_IDEAS.md  PredictC3.lua  PredictFromCheckpoint.lua  PrintSaveFile.lua  README-fresh-file-finder.md  README.md  README_REVERSE_RNG.md  README_SMT.md  RouteFreshFile.lua  RouteFreshFileIncrementally.lua  RouteFreshFileRecovery.lua  SMT_BENCHMARK_SUMMARY.md  SaveStateJson.lua  StartingBoonDemo.lua  TODO.md  TestAdvance.lua  WellManips.lua  bench_reverse_rng.sh  benchmark_avx2.sh  benchmark_avx_512.sh  benchmark_simd.sh  beo.sh  charon_routes  known_seed_test.txt  (+6 more)
Utils/: Checkpoint.lua  DeepPrint.lua  FindIncrementally.lua  FindRoute.lua  JsonPrint.lua  JsonRead.lua  LazyDeepCopyTable.lua  Matching.lua  SaveState.lua  pepperfish.lua
benches/: rng_advance.rs
src/: error.rs  lib.rs  luabins.rs  main.rs  read.rs  rng.rs  save.rs  smt_benchmark.rs  smt_real_benchmark.rs  smt_reverse_engineer.rs  smt_test.rs  smt_verification.rs  write.rs
src/fresh_file_finder/: app.rs  mod.rs  ui.rs
src/gui/: app.rs  mod.rs  ui.rs
src/reverse_rng/: data_point.rs  mod.rs  search.rs  simd_avx2.rs  simd_avx512.rs  simd_search.rs
test/: FindBeowulfRoute.test  FindCharonRoute.test  LazyDeepCopyTableTest.lua  real_fresh_file_observed_format.txt  real_fresh_file_range_format.txt  real_rng_pre_styx.txt
(+2 files in other folders)
