[package]
name = "routefinder"
version = "0.1.0"
edition = "2018"
default-run = "routefinder"

[lib]
name = "routefinder"
path = "src/lib.rs"

[[bin]]
name = "routefinder"
path = "src/main.rs"

[[bin]]
name = "fresh-file-finder"
path = "src/bin/fresh-file-finder.rs"

[dependencies]
rand = "0.8.4"
rand_core = "0.6.3"
clap = { version = "4.5.4", features = [ "derive" ] }
mlua = { version = "0.9.7", features = ["lua52", "vendored"] }
libm = "0.2.1"
lz4 = "1.23.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
druid = "0.8.3"

[features]
default = []
simd = []
simd_nightly = ["simd"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "rng_advance"
harness = false
